# week3_exercises

Automata_Example/: CMakeLists.txt
Automata_Example/source/: CMakeLists.txt
